--- a/mock/mock.csproj
+++ b/mock/mock.csproj
@@ -52,17 +52,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="dominio\Carteiro.cs" />
+    <Compile Include="dominio\IRelogio.cs" />
     <Compile Include="dominio\Lance.cs" />
     <Compile Include="dominio\Leilao.cs" />
     <Compile Include="dominio\Pagamento.cs" />
+    <Compile Include="dominio\RelogioDoSistema.cs" />
     <Compile Include="dominio\Usuario.cs" />
     <Compile Include="dominio\IRepositorioDeLeiloes.cs" />
     <Compile Include="infra\LeilaoDaoFalso.cs" />
+    <Compile Include="infra\PagamentoDao.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="servico\Avaliador.cs" />
     <Compile Include="servico\EncerradorDeLeilao.cs" />
+    <Compile Include="servico\GeradorDePagamento.cs" />
     <Compile Include="testes\EncerradorLeilaoTest.cs" />
+    <Compile Include="testes\GeradorDePagamentoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
